# vue-record

./: .eslintrc.js  .gitignore  .prettierrc  .prettierrc.js  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
client/: .env.dev  .env.prod  .env.test  .eslintrc.js  .prettierrc  README.md  package-lock.json  package.json  vue.config.js
client/src/: app.vue  main.js
client/src/components/: icon.vue  item.vue
client/src/router/: index.js
client/src/service/: api.js
client/src/store/: index.js
client/src/util/: file-util.js  http.js  remember-scroll.js  storage.js
client/src/views/: chart-table.vue  data-table.vue  el-table-form.vue  file.vue  home.vue  icon.vue  pdfjs.vue
electron/: README.md  index.html  index.js  package-lock.json  package.json
electron/rust/: README.md  package.json
electron/rust/native/: Cargo.toml
electron/rust/native/src/: lib.rs
electron/test/: index.js
public/: index.html
server/: package-lock.json  package.json  server.js
src/: App.vue  main.js  main.ts  registerServiceWorker.js
src/components/: HelloWorld.vue  header.vue  hello-world.vue  user.vue
src/router/: index.js  index.ts
src/util/: remember-scroll.js  request.js  storage.js
src/views/: Home.vue  better-scroll-x.vue  better-scroll-y.vue  chart-table.vue  data-table.vue  ele-date.vue  remember-scroll.vue  vant-calendar.vue  vant-date.vue
ssr/: index.js  package.json
ssr/template/: index.html
uni-app/: package.json
uni-app/src/: App.vue  pages.json  uni.scss
weex/: package.json
weex/src/: index.vue
(+14 files in other folders)
